# scmux

./: .atm.toml  .gitignore  CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md  scmux.toml.example
.claude/agents/: publisher.md  quality-mgr.md  rust-qa-agent.md  scmux-qa-agent.md  scrum-master.md
.claude/skills/codex-orchestration/: SKILL.md  dev-template.xml.j2  qa-template.xml.j2
.claude/skills/named-teammate-launch/: SKILL.md
.github/workflows/: ci.yml  publish-crates-manual.yml  release.yml
crates/scmux/: Cargo.toml  README.md
crates/scmux-daemon/: Cargo.toml  README.md
crates/scmux-daemon/assets/: dashboard.js  index.html
crates/scmux-daemon/src/: api.rs  atm.rs  ci.rs  config.rs  db.rs  definition_writer.rs  hosts.rs  lib.rs  logging.rs  main.rs  runtime.rs  scheduler.rs  start_cycle.rs  tmux.rs  tmux_poller.rs
crates/scmux-daemon/tests/: api_tests.rs  ci_tests.rs  db_tests.rs  e2e_tests.rs  integration_tests.rs  scheduler_tests.rs  tmux_poller_tests.rs
crates/scmux/src/: client.rs  lib.rs  main.rs  output.rs
crates/scmux/tests/: cli_tests.rs  e2e_tests.rs
crates/tms/: Cargo.toml
crates/tms-daemon/: Cargo.toml
crates/tms-daemon/src/: api.rs  tmux.rs
crates/tms/src/: main.rs
dashboard/: .gitignore  README.md  dashboard.js  index.html  preview.html  team-dashboard.jsx
deploy/linux/: scmux-daemon.service
deploy/macos/: com.scmux.scmux-daemon.plist
docs/: architecture.md  deploy.md  e2e-environment.md  e2e-manual-runbook.md  example-session.json  project-plan.md  refactor-scope-v0.5.md  release-checklist.md  release-notes-v0.3.0.md  release-notes-v1.0.0.md  requirements.md  schema.sql
docs/sprint-specs/: p1-s1-foundation.md  p1-s2-api.md  p2-s1-multihost.md  p2-s2-dashboard-test-checklist.md  p2-s2-dashboard.md  p3-s1-ci.md  p3-s2-cli.md  p4-s1-supervision.md  p4-s2-release.md  p6-critical-review-fixes.md  p6-s2-runtime-projection.md  p6-s3-cleanup-tests.md  p7-s2-runtime-write-carveout.md  v0.4.0-plan.md
scripts/: new-session.sh
tests/: e2e_tests.rs
