[package]
name = "scmux-daemon"
version.workspace = true
edition.workspace = true
description = "tmux session manager daemon for multi-agent Claude Code teams"
keywords = ["tmux", "session", "claude", "agent", "multiplexer"]
categories = ["command-line-utilities", "development-tools"]
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "scmux-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
cron.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
