[package]
name = "scmux"
version.workspace = true
edition.workspace = true
description = "tmux session manager CLI for multi-agent Claude Code teams"
keywords = ["tmux", "session", "claude", "agent", "multiplexer"]
categories = ["command-line-utilities", "development-tools"]
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "scmux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
