[package]
name = "scmux"
version.workspace = true
edition.workspace = true
description = "tmux session manager CLI for multi-agent Claude Code teams"
keywords = ["tmux", "session", "claude", "agent", "multiplexer"]
categories = ["command-line-utilities", "development-tools"]
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "scmux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
scmux-daemon = { path = "../scmux-daemon" }
